# yolov7_d2

./: .gitignore  LICENSE  benchmark.py  demo.py  demo_lazyconfig.py  export.py  export_onnx.py  export_torchscript.py  install.md  log.md  quantize_d2.py  readme.md  requirements.txt  setup.py  tests.py  train_coco.py  train_cocomini.py  train_custom.py  train_custom_datasets.py  train_det.py  train_detr.py  train_inseg.py  train_net.py  train_taco.py  train_tl.py  train_tl_mlflow.py  train_tp_mlflow.py  train_transformer.py  train_visdrone.py  train_voc.py  train_wearmask.py  upload_pypi.sh
configs/: Base-YOLOF.yaml  Base-YOLOv7.yaml
configs/canaries/: detrt_256_6_6_regnetx_0.4g.yaml  detrt_256_6_6_torchvision.yaml  regnetx_0.2g.yaml  yolomask_2gpu.yaml  yolomask_m_8gpu.yaml
configs/coco/: cspdarknet53.yaml  darknet53.yaml  pvt_v2_b0.yaml  r2_50.yaml  r2_50_l.yaml  r50.yaml  (+6 more)
configs/coco-instance/: solov2_lite.yaml  yolomask.yaml  yolomask_8gpu.yaml
configs/coco-keypoints/: yolox_kpts.yaml
d2go/: train_net.py
deploy/: demo_quantized_int8.py  onnxrt_infer.py  ort_infer.py
deploy/trt_cc/: CMakeLists.txt  demo_yolox.cc  demo_yolox_origin.cc  readme.md
docs/: usage.md
logger/: wandb_logger.py
loggers/: wandb_logger.py
test/: test_dataloader.py
tools/: cleandata.py  compute_anchors.py  convert_anchordetr_to_d2.py  convert_detr_to_d2.py  convert_smcadetr_to_d2.py  demo_onnx_detr.py  demo_trt_detr.py  eval_coco.py  quantize_d2.py  train_detr.py
wandadb/: wandb_logger.py
weights/: .gitignore  get_models.sh
yolov7/: __init__.py  config.py  version.py
(+197 files in other folders)
